LU-22 ldlm_resource::lr_lvb_data is protected by wrong lock

Use lr_lock to protect lr_lvbo_data while lr_lvbo_sem is only for
lvbo_init serialization.

Bugzilla: 24336
Change-Id: Ic3e77e99d8b3a3ca277adbc6548c254969e9761a
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/379
Tested-by: Hudson
Reviewed-by: Oleg Drokin <green@whamcloud.com>